fully refactored MVC app

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           {{/each}}
         </ul>
       </div>
-      <fieldset>
+      <fieldset class="actions">
         <button class="btn" type="submit">Submit</button>
         <button class="btn" id='cancel'>Cancel</button>
       </fieldset>
