refactors mvc into modules

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Contact Manager</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="/javascripts/jquery.js"></script>
   <script src="/javascripts/handlebars.js"></script>
-  <script src="/javascripts/app.js" type="application/javascript"></script>
+  <script src="/javascripts/app.js" type="module"></script>
 </head>
+
 <body>
   <header>
     <h1>Contact Manager</h1>
@@ -19,7 +21,8 @@
     <!--Main UI goes here-->
   </main>
   <footer>
-    Develped by: <a href="https://www.github.com/brandoncorey" target=_blank>Brandon Corey</a>
+    Develped by: <a href="https://www.github.com/brandoncorey"
+      target=_blank>Brandon Corey</a>
   </footer>
 </body>
 <script id="add-contact-template" type="text/x-handlebars">
@@ -104,4 +107,5 @@
       {{/unless}}
     </div>
 </script>
+
 </html>
